syntax = "proto3";

package pb;

import "merchant_order.proto";

option go_package = "github.com/bernie-pham/ecommercePlatform/pb";

message UpdateMerchantOrderReq {
    int64 merchant_order = 1;
    OrderStatus status = 2;
}

message UpdateMerchantOrderResponse {
    MerchantOrder merchant_order = 1;
}

