syntax = "proto3";

package pb;

import "rpc_update_merchant_order_status.proto";
import "rpc_merchant_login.proto";
import "rpc_refresh_token.proto";


option go_package = "github.com/bernie-pham/ecommercePlatform/pb";
// option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
//     info: {
//         title: "Ecommerce Platform";
//         version: "1.0";
//         contact: {
//             name: "Bernie Pham";
//             url: "https://github.com/bernie-pham";
//             email: "phamnhuthehuy@gmail.com";
//         };
//     };
// };
service OrderManagement {
    rpc LoginMerchant (LoginMerchantRequest) returns (LoginMerchantResponse) {
        // option ()
    };
    rpc UpdateOrderStatus (UpdateMerchantOrderReq) returns (UpdateMerchantOrderResponse) {};

    rpc RefreshToken (RefreshTokenReq) returns (RefreshTokenResponse) {};
}